--- a/notebooks/2023-08-20-debug-resample.ipynb
+++ b/notebooks/2023-08-20-debug-resample.ipynb
@@ -906,17 +906,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 98,
    "id": "76a90d55",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dataclasses import dataclass, field"
+    "from dataclasses import dataclass, field, fields\n",
+    "from collections import defaultdict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 101,
    "id": "6f7fdadb",
    "metadata": {},
    "outputs": [],
@@ -927,103 +928,184 @@
     "    logits: torch.tensor\n",
     "    threshold: float = field(default=0.5)\n",
     "    # score in range (0, 1.0)\n",
-    "    probs: torch.tensor = field(init=False)\n",
+    "    probs: torch.tensor = field(default=None)\n",
     "    # binary prediction {0, 1}\n",
     "    binary_preds: torch.tensor = field(init=False)\n",
     "    \n",
     "    def __post_init__(self):\n",
-    "        self.probs = torch.sigmoid(self.logits)\n",
+    "        if self.probs is None:\n",
+    "            self.probs = torch.sigmoid(self.logits)\n",
     "        self.binary_preds = (self.probs > self.threshold).to(torch.int64)\n",
-    "        self.names = list(self.logits.keys())\n",
-    "        \n",
-    "@dataclass\n",
-    "class PredictionsMultiResolution:\n",
-    "    # raw scores in range (-inf, +inf)\n",
-    "    logits: dict[str, torch.tensor]\n",
-    "    threshold: float = field(default=0.5)\n",
-    "    # score in range (0, 1.0)\n",
-    "    probs: dict[str, torch.tensor] = field(init=False)\n",
-    "    # binary prediction {0, 1}\n",
-    "    binary_preds: dict[str, torch.tensor] = field(init=False)\n",
-    "    names: list[str] = field(init=False)\n",
     "    \n",
-    "    def __post_init__(self):\n",
-    "        self.probs = {k:torch.sigmoid(v) for k,v in self.logits.items()}\n",
-    "        self.binary_preds = {k:(v > self.threshold).to(torch.int64) for k,v in self.probs.items()}\n",
-    "        self.names = list(self.logits.keys())\n",
-    "    \n",
-    "    def average(self):\n",
-    "        prob_means\n",
-    "\n",
-    "        \n",
-    "    \n"
+    "    @classmethod\n",
+    "    def concatenate(cls, predictions_list):\n",
+    "        # seq: list of predictions\n",
+    "        name2attr = defaultdict(list)\n",
+    "        for p in predictions_list:\n",
+    "            for field_val in fields(cls):\n",
+    "                p_val = getattr(p, field_val.name)\n",
+    "                name2attr[field_val.name].append(p_val)\n",
+    "        print(name2attr)\n",
+    "        concat = {\n",
+    "            k: np.concatenate(v) for k,v in name2attr.items()\n",
+    "        }\n",
+    "        return Predictions(**concat)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 102,
+   "id": "7e5e3130",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'list'>, {'logits': [tensor([0.0000, 1.0000, 1.2000]), tensor([0.0000, 1.0000, 1.2000])], 'threshold': [0.5, 0.5], 'probs': [tensor([0.5000, 0.7311, 0.7685]), tensor([0.5000, 0.7311, 0.7685])], 'binary_preds': [tensor([0, 1, 1]), tensor([0, 1, 1])]})\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "zero-dimensional arrays cannot be concatenated",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[102], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m logits2 \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor([\u001b[38;5;241m0.0\u001b[39m, \u001b[38;5;241m1.0\u001b[39m, \u001b[38;5;241m1.2\u001b[39m])\n\u001b[1;32m      3\u001b[0m preds_list \u001b[38;5;241m=\u001b[39m [Predictions(logits), Predictions(logits2)]\n\u001b[0;32m----> 4\u001b[0m preds_concat \u001b[38;5;241m=\u001b[39m \u001b[43mPredictions\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconcatenate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpreds_list\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[101], line 25\u001b[0m, in \u001b[0;36mPredictions.concatenate\u001b[0;34m(cls, predictions_list)\u001b[0m\n\u001b[1;32m     23\u001b[0m         name2attr[field_val\u001b[38;5;241m.\u001b[39mname]\u001b[38;5;241m.\u001b[39mappend(p_val)\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28mprint\u001b[39m(name2attr)\n\u001b[0;32m---> 25\u001b[0m concat \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m     26\u001b[0m     k: np\u001b[38;5;241m.\u001b[39mconcatenate(v) \u001b[38;5;28;01mfor\u001b[39;00m k,v \u001b[38;5;129;01min\u001b[39;00m name2attr\u001b[38;5;241m.\u001b[39mitems()\n\u001b[1;32m     27\u001b[0m }\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m Predictions(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mconcat)\n",
+      "Cell \u001b[0;32mIn[101], line 26\u001b[0m, in \u001b[0;36m<dictcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     23\u001b[0m         name2attr[field_val\u001b[38;5;241m.\u001b[39mname]\u001b[38;5;241m.\u001b[39mappend(p_val)\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28mprint\u001b[39m(name2attr)\n\u001b[1;32m     25\u001b[0m concat \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m---> 26\u001b[0m     k: \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconcatenate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mv\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m k,v \u001b[38;5;129;01min\u001b[39;00m name2attr\u001b[38;5;241m.\u001b[39mitems()\n\u001b[1;32m     27\u001b[0m }\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m Predictions(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mconcat)\n",
+      "File \u001b[0;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36mconcatenate\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: zero-dimensional arrays cannot be concatenated"
+     ]
+    }
+   ],
+   "source": [
+    "logits = torch.tensor([0.0, 1.0, 1.2])\n",
+    "logits2 = torch.tensor([0.0, 1.0, 1.2])\n",
+    "preds_list = [Predictions(logits), Predictions(logits2)]\n",
+    "preds_concat = Predictions.concatenate(preds_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
    "id": "5d74fca6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "logits = {\n",
-    "    \"l1\": torch.tensor([0.0, 1.0, 1.2]),\n",
-    "    \"l2\": torch.tensor([-1.0, -0.5, 0.0])\n",
-    "}\n",
-    "pmr = PredictionsMultiResolution(logits)"
+    "preds_cocnat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 82,
    "id": "8e1e271f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'l1': tensor([0.0000, 1.0000, 1.2000]),\n",
-       " 'l2': tensor([-1.0000, -0.5000,  0.0000])}"
+       "Predictions(logits=None, threshold=0.5, probs=tensor([0.6000, 0.7000, 0.8000]), binary_preds=tensor([1, 1, 1]))"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pmr.logits"
+    "Predictions(None, probs=probs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 74,
    "id": "21e4d3a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = torch.tensor([0.1, 0.2, 0.3])\n",
+    "B = torch.tensor([0.3, 0.5, 0.5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "89069b90",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'PredictionsMultiResolution' object has no attribute 'probs'",
+     "data": {
+      "text/plain": [
+       "tensor([0.2000, 0.3500, 0.4000])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.mean(torch.stack([A,B]), dim=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "5942c233",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "mean() received an invalid combination of arguments - got (Tensor, keepdim=bool), but expected one of:\n * (Tensor input, *, torch.dtype dtype)\n * (Tensor input, tuple of ints dim, bool keepdim, *, torch.dtype dtype, Tensor out)\n * (Tensor input, tuple of names dim, bool keepdim, *, torch.dtype dtype, Tensor out)\n",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[49], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mpmr\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprobs\u001b[49m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'PredictionsMultiResolution' object has no attribute 'probs'"
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[72], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmean\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstack\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mA\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mB\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkeepdim\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: mean() received an invalid combination of arguments - got (Tensor, keepdim=bool), but expected one of:\n * (Tensor input, *, torch.dtype dtype)\n * (Tensor input, tuple of ints dim, bool keepdim, *, torch.dtype dtype, Tensor out)\n * (Tensor input, tuple of names dim, bool keepdim, *, torch.dtype dtype, Tensor out)\n"
      ]
     }
    ],
    "source": [
-    "pmr.probs"
+    "torch.mean(torch.stack([A, B]), keepdim=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "89069b90",
+   "execution_count": 75,
+   "id": "eb712c87",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 3])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "C = torch.stack([A, B])\n",
+    "C.shape"
+   ]
   }
  ],
  "metadata": {
